# neural-ts

./: README.md  model.py  pyproject.toml  run.py  utils.py
src/nts/: __init__.py  config.py  data.py  main.py  model.py  nts.py  utils.py
