[project]
name = "nts"
version = "0.1.0"
description = "Learning about neural networks for time series forecasting."
readme = "README.md"
authors = [
    { name = "Tore Erdmann", email = "tore.erdmann@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.3",
    "mlflow>=3.1.1",
    "pandas>=2.3.1",
    "pydantic-settings>=2.10.1",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[dependency-groups]
dev = [
    "ipython>=8.37.0",
]

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    "nts",
]

[project.scripts]
main = "nts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
